syntax = "proto3";
import "gogoproto/gogo.proto";

package palomachain.paloma.evm;

option go_package = "github.com/palomachain/paloma/x/evm/types";

message ChainInfo {
  string chainID = 1;

  string smartContractID = 2;

  string smartContractAddr = 3;

  // used to verify by pigeons if they are at the correct chain
  uint64 referenceBlockHeight = 4;
  string referenceBlockHash = 5;

  string abi = 6;
  bytes bytecode = 7;
  bytes constructorInput = 8;
  enum Status {
    IN_PROPOSAL = 0;
    ACTIVE = 1;
    WAITING_FOR_EVIDENCE = 2;
  }
  Status status = 9;
}

