syntax = "proto3";
import "gogoproto/gogo.proto";
package palomachain.paloma.evm;

option go_package = "github.com/palomachain/paloma/x/evm/types";

message ArbitrarySmartContractCall {
  bytes payload = 1;

  string chainID = 2;
  string hexAddress = 3;
}

//TODO: ADD NONCE
message Job {
  uint64 id = 1;
}
